--- a/styles/base.css
+++ b/styles/base.css
@@ -9,9 +9,9 @@
 
     /*Color*/
     --dark-color: #131b0d;
-    --lighter-color: #c8f3d5;
+    --lighter-color: #c8f2f3;
     --accent2: #7eaf5d;
-    --accent1: #7fc7a8;
+    --accent1: #c7ae7f;
 }
 
 * {
